# flowly-android

./: README.md  build.gradle.kts  flowly-design-tokens.html  settings.gradle.kts  test_config.yaml  ui_full.xml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/kr328/clash/: BaseActivity.kt  MainActivity.kt  MainApplication.kt  (+5 more)
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: ic_launcher_background.xml
archive/flowly-compose-patch/: ARCHIVED.md  BottomNav.kt  Color.kt  ConfirmBar.kt  DashboardScreen.kt  Dimens.kt  FlowlySwitch.kt  LucideIcons.kt  ProxiesScreen.kt  SettingsScreen.kt  TopBar.kt  Type.kt  apply.sh
core/src/main/cpp/: CMakeLists.txt
design/src/main/res/anim/: slide_in_left.xml  slide_in_right.xml  slide_out_left.xml  slide_out_right.xml
design/src/main/res/drawable/: bg_dashboard.xml  bg_icon_button.xml  bg_import_btn.xml  bg_log_row.xml  bg_logo_filled.xml  bg_logo_round.xml  bg_mode_chip.xml  bg_progress_bar.xml  bg_ripple.xml  bg_segment_container.xml  bg_segment_selected.xml  bg_settings_icon.xml  bg_tab_chip.xml  ic_baseline_block.xml  ic_baseline_chevron_right.xml  ic_baseline_dark_mode.xml  ic_baseline_dashboard.xml  ic_baseline_database.xml  ic_baseline_doc.xml  ic_baseline_doc_g.xml  ic_baseline_globe.xml  ic_baseline_globe_g.xml  ic_baseline_hide.xml  ic_baseline_hub.xml  ic_baseline_link.xml  ic_baseline_memory.xml  ic_baseline_mode_auto.xml  ic_baseline_moon.xml  ic_baseline_refresh.xml  ic_baseline_relay.xml  ic_baseline_speed.xml  ic_baseline_stack.xml  ic_baseline_sun.xml  ic_baseline_target.xml  ic_baseline_terminal.xml  ic_baseline_traffic.xml  ic_baseline_tune.xml  ic_flowly_logo.xml  ic_pref_access.xml  ic_pref_arrow_left.xml  (+38 more)
design/src/main/res/font/: flowly_body.xml  flowly_display.xml  flowly_mono.xml
design/src/main/res/layout/: adapter_log_message.xml  adapter_profile.xml  adapter_profile_provider.xml  component_action_label.xml  component_action_text_field.xml  design_about.xml  design_kernel.xml  design_logs.xml  design_main.xml  design_profiles.xml  design_properties.xml  design_proxy.xml  design_settings.xml
design/src/main/res/menu/: bottom_nav_menu.xml  menu_proxy.xml
design/src/main/res/values/: arrays.xml  attrs.xml  colors.xml  dimens.xml  ids.xml  integers.xml  strings.xml  styles.xml  themes.xml
design/src/main/res/values-ja/: strings.xml
design/src/main/res/values-ja-rJP/: strings.xml
design/src/main/res/values-ko/: strings.xml
design/src/main/res/values-ko-rKR/: strings.xml
design/src/main/res/values-ru/: strings.xml
design/src/main/res/values-vi/: strings.xml
design/src/main/res/values-zh/: strings.xml
design/src/main/res/values-zh-rHK/: strings.xml
design/src/main/res/values-zh-rTW/: strings.xml
service/src/main/res/drawable/: ic_logo_service.xml
service/src/main/res/values/: colors.xml  strings.xml
service/src/main/res/values-ja-rJP/: strings.xml
service/src/main/res/values-ko-rKR/: strings.xml
service/src/main/res/values-ru/: strings.xml
service/src/main/res/values-zh/: strings.xml
service/src/main/res/values-zh-rHK/: strings.xml
service/src/main/res/values-zh-rTW/: strings.xml
(+40 files in other folders)
